--- a/package.json
+++ b/package.json
@@ -1,33 +1,48 @@
 {
-  "private": true,
-    "name": "bloggrify",
-    "type": "module",
+  "name": "@bloggrify/core",
+  "description": "A Nuxt.js app to create a blog with Nuxt Content and Tailwind CSS",
+  "license": "MIT",
+  "version": "1.1.4-SNAPSHOT",
+  "author": "Eventually Coding <contact@eventuallycoding.com>",
+  "main": "./nuxt.config.ts",
+  "files": [
+      "components",
+      "composables",
+      "pages",
+      "server",
+      "app.vue",
+      "app.config.ts",
+      "nuxt.config.ts",
+      "tailwind.config.js"
+  ],
+
+  "type": "module",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "lint": "eslint ."
+      "build": "nuxt build",
+      "dev": "nuxt dev",
+      "generate": "nuxt generate",
+      "preview": "nuxt preview",
+      "lint": "eslint ."
   },
   "dependencies": {
-    "@nuxt/content": "^2.11.0",
-    "@nuxtjs/tailwindcss": "6.11.4",
-    "@tailwindcss/typography": "0.5.10",
-    "@vueuse/integrations": "^10.4.1",
-    "@vueuse/nuxt": "^10.4.1",
-    "feed": "4.2.2",
-    "fuse.js": "^6.6.2",
-    "focus-trap": "^7.5.3",
-    "nuxt": "3.10.3",
-    "remark-reading-time": "2.0.1",
-    "sitemap": "7.1.1",
-    "v-click-outside": "3.1.2"
+      "@nuxt/content": "^2.11.0",
+      "@nuxt/image": "1.3.0",
+      "@nuxtjs/tailwindcss": "6.11.4",
+      "@stefanobartoletti/nuxt-social-share": "^0.5.5",
+      "@tailwindcss/typography": "0.5.10",
+      "@vueuse/integrations": "^10.4.1",
+      "@vueuse/nuxt": "^10.4.1",
+      "feed": "4.2.2",
+      "focus-trap": "^7.5.3",
+      "fuse.js": "^6.6.2",
+      "nuxt": "3.10.3",
+      "remark-reading-time": "2.0.1",
+      "sitemap": "7.1.1"
   },
   "devDependencies": {
-    "@nuxt/image": "1.3.0",
-    "@nuxt/eslint-config": "^0.2.0",
-    "autoprefixer": "10.4.17",
-    "eslint": "8.57.0",
-    "sass": "1.70.0"
+      "@nuxt/eslint-config": "^0.2.0",
+      "autoprefixer": "10.4.17",
+      "eslint": "8.57.0",
+      "sass": "1.70.0"
   }
 }
